# MLLMTool

./: .gitattributes  .gitignore  LICENSE  README.md  cloudbuild.yaml  package-lock.json
ai-notebook/: package-lock.json  package.json
ai-notebook/app/: layout.tsx  notebook.tsx  page.tsx
ai-notebook/lib/: fileUploader.ts  (+7 more)
backend/: .gitignore  Dockerfile  HighlightRequirements.txt  README.md  cloudbuild.yaml  gcs-cors.json  pyproject.toml  requirements.txt  transcription.py
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: audio.py  health.py  highlight.py  onboard.py  sources.py  summary.py  transcribe.py  transcript.py  upload.py
backend/app/core/: constants.py  firebase_auth.py  firebase_client.py  settings.py
backend/app/pipelines/: groq_highlight_pipeline.py  groq_summarization_pipeline.py  groq_transcription_pipeline.py  groq_whisper_pipeline.py
backend/app/schemas/: highlight.py  sources.py  transcribe.py  transcript.py  upload.py
backend/app/services/: audio_service.py  highlight_service.py  model_registry.py  onboard_service.py  source_service.py  summary_service.py  transcribe_service.py  transcript_service.py  transcription_service.py  upload_service.py
backend/app/utils/: gcs_utils.py
backend/enhanced_transcript_highlighter/: README.md
backend/static/: index.html  index.js
backend/summaryAPI/: summarizationApi.py
backend_bk/: HighlightRequirements.txt  main.py  requirements.txt  transcription.py
frontend/: README.md  cloudbuild.yaml  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
(+154 files in other folders)
